// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose should match snapshot for Aged Brie with sellIn = 0 1`] = `
[
  Item {
    "name": "Aged Brie",
    "quality": 11,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose should match snapshot for Backstage passes with sellIn = 0 1`] = `
[
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 13,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose should match snapshot for Conjured item 1`] = `
[
  Item {
    "name": "Conjured",
    "quality": 9,
    "sellIn": 1,
  },
]
`;

exports[`Gilded Rose should match snapshot for Sulfuras with sellIn = 0 1`] = `
[
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose should match snapshot for empty items array 1`] = `[]`;

exports[`Gilded Rose should match snapshot for normal item with sellIn = 0 and quality = 0 1`] = `
[
  Item {
    "name": "Normal Item",
    "quality": 0,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose should match snapshot for normal item with sellIn = 0 and quality > 0 1`] = `
[
  Item {
    "name": "Normal Item",
    "quality": 9,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose should match snapshot for normal item with sellIn > 0 and quality = 0 1`] = `
[
  Item {
    "name": "Normal Item",
    "quality": 0,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose should match snapshot for normal item with sellIn > 0 and quality > 0 1`] = `
[
  Item {
    "name": "Normal Item",
    "quality": 9,
    "sellIn": 4,
  },
]
`;
